# python-poetry-tox-test

./: .gitignore  .python-version  .travis.yml  Makefile  README.md  pyproject.toml  tox.ini
src/poetry_tox_test/: api.py
tests/poetry_tox_test/: test_api.py
