[tool.poetry]
name = "poetry_tox_test"
version = "0.1.0"
description = ""
authors = ["Viacheslav Bessonov <viacheslav.bessonov@hilbertteam.com>"]

[tool.poetry.dependencies]
python = ">=2.7"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
